--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 body {
-    background-color: darkgray;
-    color: rgb(18, 13, 13);
-}
+  background-color: darkgray;
+  color: rgb(18, 13, 13);
+}/*# sourceMappingURL=style.css.map */
