--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 body {
   background-color: darkgray;
   color: rgb(18, 13, 13);
+}
+body .book .book {
+  background-color: #222;
+  margin-bottom: 1rem;
+}
+body .book .book .title {
+  color: yellow;
 }/*# sourceMappingURL=style.css.map */
